--- a/Timings.ipynb
+++ b/Timings.ipynb
@@ -480,6 +480,50 @@
     "\n",
     "tester = np.random.random((4000, 300))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from experiment import Experiment\n",
+    "\n",
+    "ex = Experiment(1, [0])  # timing the run of all MSNBC calculation\n",
+    "ex.load_texts('Three Months for Semantic Network Experiments')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running 100% MSNBC\n",
+      "CPU times: user 4min 40s, sys: 8.22 s, total: 4min 48s\n",
+      "Wall time: 2min 47s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time ex.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
