results saving nb for non-pickle saving

--- a/LDA Pre-Experiment.ipynb
+++ b/LDA Pre-Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,15 +20,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:lda:n_documents: 395\n",
+      "INFO:lda:vocab_size: 4258\n",
+      "INFO:lda:n_words: 84010\n",
+      "INFO:lda:n_topics: 20\n",
+      "INFO:lda:n_iter: 1500\n",
+      "INFO:lda:<0> log likelihood: -1051748\n",
+      "INFO:lda:<10> log likelihood: -720914\n",
+      "INFO:lda:<20> log likelihood: -697325\n",
+      "INFO:lda:<30> log likelihood: -689299\n",
+      "INFO:lda:<40> log likelihood: -684048\n",
+      "INFO:lda:<50> log likelihood: -679661\n",
+      "INFO:lda:<60> log likelihood: -677089\n",
+      "INFO:lda:<70> log likelihood: -674319\n",
+      "INFO:lda:<80> log likelihood: -673041\n",
+      "INFO:lda:<90> log likelihood: -671861\n",
+      "INFO:lda:<100> log likelihood: -671378\n",
+      "INFO:lda:<110> log likelihood: -669197\n",
+      "INFO:lda:<120> log likelihood: -668723\n",
+      "INFO:lda:<130> log likelihood: -667843\n",
+      "INFO:lda:<140> log likelihood: -667514\n",
+      "INFO:lda:<150> log likelihood: -666729\n",
+      "INFO:lda:<160> log likelihood: -666396\n",
+      "INFO:lda:<170> log likelihood: -666131\n",
+      "INFO:lda:<180> log likelihood: -665107\n",
+      "INFO:lda:<190> log likelihood: -665108\n",
+      "INFO:lda:<200> log likelihood: -664960\n",
+      "INFO:lda:<210> log likelihood: -664488\n",
+      "INFO:lda:<220> log likelihood: -664444\n",
+      "INFO:lda:<230> log likelihood: -663820\n",
+      "INFO:lda:<240> log likelihood: -663978\n",
+      "INFO:lda:<250> log likelihood: -663707\n",
+      "INFO:lda:<260> log likelihood: -663095\n",
+      "INFO:lda:<270> log likelihood: -663269\n",
+      "INFO:lda:<280> log likelihood: -662754\n",
+      "INFO:lda:<290> log likelihood: -662681\n",
+      "INFO:lda:<300> log likelihood: -662488\n",
+      "INFO:lda:<310> log likelihood: -662394\n",
+      "INFO:lda:<320> log likelihood: -662125\n",
+      "INFO:lda:<330> log likelihood: -661551\n",
+      "INFO:lda:<340> log likelihood: -661889\n",
+      "INFO:lda:<350> log likelihood: -661738\n",
+      "INFO:lda:<360> log likelihood: -661571\n",
+      "INFO:lda:<370> log likelihood: -661721\n",
+      "INFO:lda:<380> log likelihood: -661752\n",
+      "INFO:lda:<390> log likelihood: -660971\n",
+      "INFO:lda:<400> log likelihood: -661289\n",
+      "INFO:lda:<410> log likelihood: -661151\n",
+      "INFO:lda:<420> log likelihood: -661828\n",
+      "INFO:lda:<430> log likelihood: -661426\n",
+      "INFO:lda:<440> log likelihood: -661328\n",
+      "INFO:lda:<450> log likelihood: -661168\n",
+      "INFO:lda:<460> log likelihood: -661107\n",
+      "INFO:lda:<470> log likelihood: -661217\n",
+      "INFO:lda:<480> log likelihood: -661269\n",
+      "INFO:lda:<490> log likelihood: -660702\n",
+      "INFO:lda:<500> log likelihood: -661081\n",
+      "INFO:lda:<510> log likelihood: -661288\n",
+      "INFO:lda:<520> log likelihood: -661267\n",
+      "INFO:lda:<530> log likelihood: -660437\n",
+      "INFO:lda:<540> log likelihood: -660674\n",
+      "INFO:lda:<550> log likelihood: -660571\n",
+      "INFO:lda:<560> log likelihood: -660960\n",
+      "INFO:lda:<570> log likelihood: -660672\n",
+      "INFO:lda:<580> log likelihood: -660949\n",
+      "INFO:lda:<590> log likelihood: -660671\n",
+      "INFO:lda:<600> log likelihood: -660210\n",
+      "INFO:lda:<610> log likelihood: -660354\n",
+      "INFO:lda:<620> log likelihood: -659893\n",
+      "INFO:lda:<630> log likelihood: -659805\n",
+      "INFO:lda:<640> log likelihood: -659956\n",
+      "INFO:lda:<650> log likelihood: -660195\n",
+      "INFO:lda:<660> log likelihood: -659852\n",
+      "INFO:lda:<670> log likelihood: -660029\n",
+      "INFO:lda:<680> log likelihood: -659313\n",
+      "INFO:lda:<690> log likelihood: -659209\n",
+      "INFO:lda:<700> log likelihood: -659899\n",
+      "INFO:lda:<710> log likelihood: -659765\n",
+      "INFO:lda:<720> log likelihood: -659472\n",
+      "INFO:lda:<730> log likelihood: -659627\n",
+      "INFO:lda:<740> log likelihood: -659152\n",
+      "INFO:lda:<750> log likelihood: -659049\n",
+      "INFO:lda:<760> log likelihood: -658623\n",
+      "INFO:lda:<770> log likelihood: -659185\n",
+      "INFO:lda:<780> log likelihood: -659190\n",
+      "INFO:lda:<790> log likelihood: -659279\n",
+      "INFO:lda:<800> log likelihood: -658833\n",
+      "INFO:lda:<810> log likelihood: -658896\n",
+      "INFO:lda:<820> log likelihood: -659071\n",
+      "INFO:lda:<830> log likelihood: -658644\n",
+      "INFO:lda:<840> log likelihood: -659121\n",
+      "INFO:lda:<850> log likelihood: -658571\n",
+      "INFO:lda:<860> log likelihood: -658597\n",
+      "INFO:lda:<870> log likelihood: -658423\n",
+      "INFO:lda:<880> log likelihood: -658353\n",
+      "INFO:lda:<890> log likelihood: -658418\n",
+      "INFO:lda:<900> log likelihood: -658153\n",
+      "INFO:lda:<910> log likelihood: -657932\n",
+      "INFO:lda:<920> log likelihood: -657955\n",
+      "INFO:lda:<930> log likelihood: -658105\n",
+      "INFO:lda:<940> log likelihood: -657812\n",
+      "INFO:lda:<950> log likelihood: -658239\n",
+      "INFO:lda:<960> log likelihood: -658327\n",
+      "INFO:lda:<970> log likelihood: -658353\n",
+      "INFO:lda:<980> log likelihood: -658250\n",
+      "INFO:lda:<990> log likelihood: -657935\n",
+      "INFO:lda:<1000> log likelihood: -658225\n",
+      "INFO:lda:<1010> log likelihood: -658293\n",
+      "INFO:lda:<1020> log likelihood: -657925\n",
+      "INFO:lda:<1030> log likelihood: -657578\n",
+      "INFO:lda:<1040> log likelihood: -657627\n",
+      "INFO:lda:<1050> log likelihood: -657992\n",
+      "INFO:lda:<1060> log likelihood: -657871\n",
+      "INFO:lda:<1070> log likelihood: -658130\n",
+      "INFO:lda:<1080> log likelihood: -657891\n",
+      "INFO:lda:<1090> log likelihood: -657274\n",
+      "INFO:lda:<1100> log likelihood: -658103\n",
+      "INFO:lda:<1110> log likelihood: -657052\n",
+      "INFO:lda:<1120> log likelihood: -657482\n",
+      "INFO:lda:<1130> log likelihood: -657370\n",
+      "INFO:lda:<1140> log likelihood: -657541\n",
+      "INFO:lda:<1150> log likelihood: -656825\n",
+      "INFO:lda:<1160> log likelihood: -657065\n",
+      "INFO:lda:<1170> log likelihood: -657351\n",
+      "INFO:lda:<1180> log likelihood: -657305\n",
+      "INFO:lda:<1190> log likelihood: -656739\n",
+      "INFO:lda:<1200> log likelihood: -657200\n",
+      "INFO:lda:<1210> log likelihood: -657511\n",
+      "INFO:lda:<1220> log likelihood: -656821\n",
+      "INFO:lda:<1230> log likelihood: -656879\n",
+      "INFO:lda:<1240> log likelihood: -657220\n",
+      "INFO:lda:<1250> log likelihood: -656963\n",
+      "INFO:lda:<1260> log likelihood: -657375\n",
+      "INFO:lda:<1270> log likelihood: -656901\n",
+      "INFO:lda:<1280> log likelihood: -656844\n",
+      "INFO:lda:<1290> log likelihood: -656919\n",
+      "INFO:lda:<1300> log likelihood: -657421\n",
+      "INFO:lda:<1310> log likelihood: -656635\n",
+      "INFO:lda:<1320> log likelihood: -656293\n",
+      "INFO:lda:<1330> log likelihood: -656519\n",
+      "INFO:lda:<1340> log likelihood: -656345\n",
+      "INFO:lda:<1350> log likelihood: -656023\n",
+      "INFO:lda:<1360> log likelihood: -656136\n",
+      "INFO:lda:<1370> log likelihood: -656486\n",
+      "INFO:lda:<1380> log likelihood: -656832\n",
+      "INFO:lda:<1390> log likelihood: -656441\n",
+      "INFO:lda:<1400> log likelihood: -656106\n",
+      "INFO:lda:<1410> log likelihood: -656627\n",
+      "INFO:lda:<1420> log likelihood: -656762\n",
+      "INFO:lda:<1430> log likelihood: -655634\n",
+      "INFO:lda:<1440> log likelihood: -656498\n",
+      "INFO:lda:<1450> log likelihood: -656129\n",
+      "INFO:lda:<1460> log likelihood: -656555\n",
+      "INFO:lda:<1470> log likelihood: -656335\n",
+      "INFO:lda:<1480> log likelihood: -656799\n",
+      "INFO:lda:<1490> log likelihood: -656126\n",
+      "INFO:lda:<1499> log likelihood: -656056\n"
+     ]
+    }
+   ],
    "source": [
-    "import logging\n",
-    "logging.disable(logging.CRITICAL)\n",
+    "#import logging\n",
+    "#logging.disable(logging.CRITICAL)\n",
     "\n",
     "e.fit_lda()"
    ]
